cmake_minimum_required(VERSION 2.4)
#cmake_policy(SET CMP0026 OLD)
project(runtime)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_SOURCE_DIR}/recipes)
set(HTTP_PROXY "" CACHE string "If you are behind a http proxy, set it here")
set(HTTPS_PROXY "" CACHE string "If you are behind a https proxy, set it here")
set(DOWNLOAD_DIRECTORY "${CMAKE_SOURCE_DIR}/packages" CACHE path "Source packages will be downloaded to this directory")
set(BUILD_DIRECTORY "${CMAKE_BINARY_DIR}/build" CACHE path "Source packages will be decompressed, repositories cloned to this directory")

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/bin)

if(NOT "${HTTP_PROXY}" STREQUAL "")
	set(ENV{http_proxy} "${HTTP_PROXY}")
endif()
if(NOT "${HTTPS_PROXY}" STREQUAL "")
	set(ENV{https_proxy} "${HTTPS_PROXY}")
endif()

find_package(Cygwin)
if(CYGWIN_INSTALL_PATH)
	list(APPEND CMAKE_PREFIX_PATH "${CYGWIN_INSTALL_PATH}")
	set(ENV{CYGWIN} "nodosfilewarning")
else(CYGWIN_INSTALL_PATH)
	# Try to guess the path for GnuWin32
	set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};C:/GnuWin32")
endif(CYGWIN_INSTALL_PATH)

message(STATUS "${CMAKE_GENERATOR_TOOLSET}")
# Packages-----------------------------------------
include(gmock_gtest)
include(zlib)
include(libpng)
include(freetype)
include(libxml2)
include(xxd)
include(glslang)
